# vidapi

./: .dockerignore  .env.docker  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.legacy  Dockerfile.worker  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.spec_system/: CONSIDERATIONS.md  CONVENTIONS.md  SECURITY-COMPLIANCE.md  docs-audit.md  state.json
alembic/: env.py
app/: main.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  SECURITY-COMPLIANCE.md  captions-and-posters.md  deployment.md  development.md  docs-audit.md  environments.md  final-plan.md  hyperframes-renderer.md  native-ffmpeg-renderer.md  onboarding.md  operations.md  output-formats.md  renderer-capabilities.md
references/: sources.md
scripts/: dev.sh  postgres-migration-smoke.sh  smoke-test.sh  worker-entrypoint.sh  worker-healthcheck.sh
tests/: conftest.py  test_alembic_migrations.py  test_api_auth.py  test_api_hardening.py  test_api_renders.py  test_api_template_renders.py  test_asset_security.py  test_audio_mixer.py  test_composition_schema.py  test_config.py  test_database_session.py  test_editly_compiler.py  test_health.py  test_hyperframes_renderer.py  test_limits.py  test_logging.py  test_metrics.py  test_native_ffmpeg_renderer.py  test_ops_api.py  test_output_formats.py  test_output_postprocess.py  test_position_resolver.py  test_render_service_assets.py  test_renderer_capabilities.py  test_renderer_selection_flow.py  test_request_limits.py  test_s3_storage.py  test_storage.py  test_storage_urls.py  test_template_engine.py  test_text_renderer.py  test_transitions.py  test_webhook_service.py  test_worker_enqueue.py  test_workspace.py  (+1 more)
(+182 files in other folders)
