[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "vidapi"
version = "0.1.36"
description = "Self-hosted FastAPI service for programmatic video rendering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "starlette>=0.49.1,<1.0.0",
    "pydantic==2.11.2",
    "pydantic-settings==2.9.1",
    "uvicorn[standard]==0.34.2",
    "structlog==25.1.0",
    "httpx==0.28.1",
    "sqlmodel==0.0.24",
    "aiosqlite==0.21.0",
    "asyncpg>=0.30",
    "pillow==11.2.1",
    "alembic>=1.15",
    "arq>=0.26",
    "redis[hiredis]>=5.0",
    "Jinja2>=3.1",
    "boto3>=1.34,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["references/"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "A003",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "PIL.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
